--- a/work.html
+++ b/work.html
@@ -89,7 +89,7 @@
       <a href="https://github.com/BrianaHarper2022" target="_blank" title="Github Profile"><i class="fa-brands fa-github"></i></a>
       <a href="https://www.linkedin.com/in/briana-harper-831324183/" target="_blank" title="Linkedin Profile"><i class="fa-brands fa-linkedin"></i></a>
       </div>
-      <p class="text-center m-4">This webpage was built by <a href="https://github.com/BrianaHarper2022" target="_blank" title="Github Profile">Briana Harper</a>, is <a href="https://github.com/BrianaHarper2022?tab=repositories" target="_blank" title="Github Repository">open-sourced on Github</a> and <a href="https://briana-harper-portfolio.netlify.app/" target="_blank" title="Portfolio hosting on Netlify">hosted on Netlify</a></p>
+      <p class="text-center m-4">This webpage was built by <a href="https://github.com/BrianaHarper2022" target="_blank" title="Github Profile">Briana Harper</a>, is <a href="https://github.com/BrianaHarper2022?tab=repositories" target="_blank" title="Github Repository">open-sourced on Github</a> and <a href="https://portfolio-of-briana-harper.netlify.app" target="_blank" title="Portfolio hosting on Netlify">hosted on Netlify</a></p>
     </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
