--- a/work.html
+++ b/work.html
@@ -16,9 +16,9 @@
     <title>Briana Harper's work - Front-end developer</title>
 </head>
 <body>
-   <nav class="navbar navbar-expand-lg bg-white">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/" title="Homepage">Briana Harper</a>
+  <nav class="navbar navbar-expand-lg bg-white">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/" title="Homepage">Briana Harper</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -38,41 +38,49 @@
         </li>
       </ul>
     </div>
-  </div>
-</nav>
+    </div>
+  </nav>
     <div class="content-container container">
         <div class="content">
-            <h1 class="mb-5">Take a look at what I've been working on!</h1>
-
+              <h1 class="mb-5">Take a look at what I've been working on!</h1>
             <div class="row">
-               <div class="col-md-6 mb-4">
-                <img src="/images/responsive-landing-page.png" class="img-fluid mb-3 rounded" alt="Landing Page preview" title="Landing page"/>
+              <div class="col-md-6 mb-4">
+                <img src="/images/cinematic-flirt.png" class="img-fluid mb-3 rounded" alt="Landing Page preview" title="Landing page"/>
                 <h3 class="text-center m-0">Responsive Landing Page</h3>
                 <p class="text-center text-muted">Built with HTML and CSS</p>
-                </div>
-                
+              </div>
+              <div class="col-md-6 mb-4">
+               <img src="/images/react-dictionary.png" class="img-fluid mb-3 rounded" alt="Landing Page preview" title="Landing page"/>
+               <h3 class="text-center m-0">Responsive Landing Page</h3>
+               <p class="text-center text-muted">Built with HTML and CSS</p>
+              </div>
+              <div class="col-md-6 mb-4">
+              <img src="/images/react-weather-app.png" class="img-fluid mb-3 rounded" alt="Landing Page preview" title="Landing page"/>
+              <h3 class="text-center m-0">Responsive Landing Page</h3>
+              <p class="text-center text-muted">Built with HTML and CSS</p>
+              </div>
             </div>
         </div>
+      </div>
         <footer>
-      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
-          <div>
-            <h4>Work Inquiry</h4>
-            <p class="text-muted">Let's work together</p>
+          <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+            <div>
+              <h4>Work Inquiry</h4>
+              <p class="text-muted">Let's work together</p>
+            </div>
+            <div>
+              <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Briana"> Contact me </a>
+            </div>
           </div>
-          <div>
-            <a href="/contact.html" class="btn btn-branding mt-3" title="Contact Briana"> Contact me </a>
+          <div class="d-flex justify-content-center mb-5">
+            <a  class="email-link" href="mailto:brianaharper2024@gmail.com" title="Email Briana">brianaharper2024@gmail.com</a>
           </div>
-        </div>
-      <div class="d-flex justify-content-center mb-5">
-      <a  class="email-link" href="mailto:brianaharper2024@gmail.com" title="Email Briana">brianaharper2024@gmail.com</a>
-      </div>
-      <div class="social-links d-flex justify-content-center">
-      <a href="https://github.com/BrianaHarper2022" target="_blank" title="Github Profile"><i class="fa-brands fa-github"></i></a>
-      <a href="https://www.linkedin.com/in/briana-harper-831324183/" target="_blank" title="Linkedin Profile"><i class="fa-brands fa-linkedin"></i></a>
-      </div>
-      <p class="text-center m-4">This webpage was built by <a href="https://github.com/BrianaHarper2022" target="_blank" title="Github Profile">Briana Harper</a>, is <a href="https://github.com/BrianaHarper2022?tab=repositories" target="_blank" title="Github Repository">open-sourced on Github</a> and <a href="https://portfolio-of-briana-harper.netlify.app" target="_blank" title="Portfolio hosting on Netlify">hosted on Netlify</a></p>
-    </footer>
-    </div>
+          <div class="social-links d-flex justify-content-center">
+            <a href="https://github.com/BrianaHarper2022" target="_blank" title="Github Profile"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/briana-harper-831324183/" target="_blank" title="Linkedin Profile"><i class="fa-brands fa-linkedin"></i></a>
+          </div>
+            <p class="text-center m-4">This webpage was built by <a href="https://github.com/BrianaHarper2022" target="_blank" title="Github Profile">Briana Harper</a>, is <a href="https://github.com/BrianaHarper2022?tab=repositories" target="_blank" title="Github Repository">open-sourced on Github</a> and <a href="https://portfolio-of-briana-harper.netlify.app" target="_blank" title="Portfolio hosting on Netlify">hosted on Netlify</a></p>
+      </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
