Updated homepage content

--- a/index.html
+++ b/index.html
@@ -56,33 +56,45 @@
   <div class="row mb-5">
     <div class="col">
       <div class="project-description">
-        <h2 class="mb-5">Responsive Landing Page</h2>
+        <h2 class="mb-5">Coming Soon...</h2>
         <p class="mb-5 text-muted">
-             This responsive landing page invites you to plan your next vacation to your own favorite city. Crafted while invisioning going on a trip, I designed this responsive landing page using HTML 5 and CSS3 only.   
+          Currently developing a React.js application designed for movie enthusiasts to connect and find matches based on shared film preferences.
         </p>
-        <a href="https://travel-project-responsive-addon.netlify.app" class="btn btn-branding-outline" target="_blank"> Learn more </a>
+        <a href="https://cinematic-flirt.netlify.app/" class="btn btn-branding-outline" target="_blank"> Learn more </a>
     </div>
     </div>
     <div class="col d-none d-lg-block">
-      <img src="images/responsive-landing-page.png" class="img-fluid rounded" alt="Landing Page preview" title="Landing Page"> 
+      <img src="images/cinematic-flirt-1.png" class="img-fluid rounded" alt="Page preview" title="React App"> 
     </div>
     </div>
   <div class="row mb-5">
     <div class="col d-none d-lg-block">
-      <img src="images/ai-poem-generator.png" class="img-fluid rounded" alt="AI Poem Generator preview" title="AI Poem Generator">
+      <img src="images/react-dictionary.png" class="img-fluid rounded" alt="Dictionary preview" title="React Dictionary">
     </div>
     <div class="col">
       <div class="project-description">
-        <h2 class="mb-5">AI Poems Generator</h2>
+        <h2 class="mb-5">Dictionary</h2>
         <p class="mb-5 text-muted">
-              Harnessing the power of cutting-edge machine learning algorithms, this generator crafts unique and evocative poetry at the click of a button. Users can effortlessly explore countless stanzas from multiple user entered topics.
+          A dynamic React dictionary app utilizing JavaScript, React.js and CSS. By using two APIs, this app features an intuitive search function, real-time word definitions, a sleek gallery, and responsive design.
         </p>
-        <a href="https://ai-poems-generator-shecodes-ai-addon.netlify.app" class="btn btn-branding-outline" target="_blank"> Learn more </a>
+        <a href="https://dictionary-react-addon.netlify.app/" class="btn btn-branding-outline" target="_blank"> Learn more </a>
     </div>
     </div>
   </div>
-  
-    </div>
+  <div class="row mb-5">
+  <div class="col">
+    <div class="project-description">
+      <h2 class="mb-5">Weather App</h2>
+      <p class="mb-5 text-muted">
+        Responsive weather app using React, JavaScript, CSS, and Bootstrap, integrating a weather API for real-time data. The app provides users with current weather conditions, forecasts, and an intuitive interface.
+      </p>
+      <a href="https://weather-app-react-final-project.netlify.app/" class="btn btn-branding-outline" target="_blank"> Learn more </a>
+  </div>
+  </div>
+  <div class="col d-none d-lg-block">
+    <img src="images/react-weather-app.png" class="img-fluid rounded" alt="Weather App preview" title="React Weather App"> 
+  </div>
+</div>
     <footer>
       <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
@@ -102,7 +114,7 @@
       </div>
       <p class="text-center m-4">This webpage was built by <a href="https://github.com/BrianaHarper2022" target="_blank" title="Github Profile">Briana Harper</a>, is <a href="https://github.com/BrianaHarper2022?tab=repositories" target="_blank" title="Github Repository">open-sourced on Github</a> and <a href="https://portfolio-of-briana-harper.netlify.app" target="_blank" title="Portfolio hosting on Netlify">hosted on Netlify</a></p>
     </footer>
-</div>
+  </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
