--- a/work.html
+++ b/work.html
@@ -45,23 +45,23 @@
               <h1 class="mb-5">Take a look at what I've been working on!</h1>
             <div class="row">
               <div class="col-md-6 mb-4">
-                <img src="/images/cinematic-flirt.png" class="img-fluid mb-3 rounded" alt="Landing Page preview" title="Landing page"/>
-                <h3 class="text-center m-0">Responsive Landing Page</h3>
-                <p class="text-center text-muted">Built with HTML and CSS</p>
+                <img src="/images/cinematic-flirt-1.png" class="img-fluid mb-3 rounded" alt="Landing Page preview" title="Landing page"/>
+                <h3 class="text-center m-0">Coming Soon...</h3>
+                <p class="text-center text-muted">Built with React, Bootstrap, CSS</p>
               </div>
               <div class="col-md-6 mb-4">
                <img src="/images/react-dictionary.png" class="img-fluid mb-3 rounded" alt="Landing Page preview" title="Landing page"/>
-               <h3 class="text-center m-0">Responsive Landing Page</h3>
-               <p class="text-center text-muted">Built with HTML and CSS</p>
+               <h3 class="text-center m-0">Dictionary</h3>
+               <p class="text-center text-muted">Built with React, CSS and two APIs</p>
               </div>
               <div class="col-md-6 mb-4">
               <img src="/images/react-weather-app.png" class="img-fluid mb-3 rounded" alt="Landing Page preview" title="Landing page"/>
-              <h3 class="text-center m-0">Responsive Landing Page</h3>
-              <p class="text-center text-muted">Built with HTML and CSS</p>
+              <h3 class="text-center m-0">Weather App</h3>
+              <p class="text-center text-muted">Built with React, Bootstrap, CSS and an API</p>
               </div>
             </div>
         </div>
-      </div>
+      
         <footer>
           <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
             <div>
@@ -81,6 +81,7 @@
           </div>
             <p class="text-center m-4">This webpage was built by <a href="https://github.com/BrianaHarper2022" target="_blank" title="Github Profile">Briana Harper</a>, is <a href="https://github.com/BrianaHarper2022?tab=repositories" target="_blank" title="Github Repository">open-sourced on Github</a> and <a href="https://portfolio-of-briana-harper.netlify.app" target="_blank" title="Portfolio hosting on Netlify">hosted on Netlify</a></p>
       </footer>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
