Updated About me section

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
             <div class="content">
             <h1 class="mb-4">Hi I am Briana Harper</h1>
             <h2 class="mb-4">Front-end Developer based in Charlotte, NC</h2>
-            <p class="mb-5 text-muted">If you are curious about coding, just take the leap and jump in. That was one of the most effortless decisions I could have ever made. I started my coding journey with freeCodeCamp and then moved on to Shecodes. This platform has challenged me in ways I never thought possible, exposed me to a welcoming community and has restored faith in my abilities. I love the types of projects I created and it has encouraged me to want for more.</p>
+            <p class="mb-5 text-muted">If you are curious about coding, just take the leap and jump in. That was one of the most effortless decisions I could have ever made. I started my coding journey with freeCodeCamp and then moved on to Shecodes. I advanced my studies by conducting in-depth explorations to develop my own personal projects. </p>
             <a href="/work.html" class="btn btn-branding-outline"> See my projects</a>
         </div>
         </div>
