Added another project to the index
-Added image of a new project with bio

-Linked to website hosting

--- a/index.html
+++ b/index.html
@@ -54,9 +54,23 @@
 </p>
 <div class="container">
   <div class="row mb-5">
+    <div class="col d-none d-lg-block">
+      <img src="images/Crochet-by-q.PNG" class="img-fluid rounded" alt="Dictionary preview" title="React Dictionary">
+    </div>
     <div class="col">
       <div class="project-description">
-        <h2 class="mb-5">Coming Soon...</h2>
+        <h2 class="mb-5">Crochet by Que</h2>
+        <p class="mb-5 text-muted">
+          An e-commerce website specializing in crochet dolls. This website utilizes HTML, CSS, and Bootstrap to create a visually appealing and device-responsive design that engages customers in the shopping experience.
+        </p>
+        <a href="https://qua-e-comm.netlify.app" class="btn btn-branding-outline" target="_blank"> Learn more </a>
+    </div>
+    </div>
+  </div>
+  <div class="row mb-5">
+    <div class="col">
+      <div class="project-description">
+        <h2 class="mb-5">Cinematic Flirt</h2>
         <p class="mb-5 text-muted">
           Currently developing a React.js application designed for movie enthusiasts to connect and find matches based on shared film preferences.
         </p>
@@ -64,7 +78,7 @@
     </div>
     </div>
     <div class="col d-none d-lg-block">
-      <img src="images/cinematic-flirt-1.png" class="img-fluid rounded" alt="Page preview" title="React App"> 
+      <img src="images/cinematic-flirt.png" class="img-fluid rounded" alt="Page preview" title="React App"> 
     </div>
     </div>
   <div class="row mb-5">
