--- a/work.html
+++ b/work.html
@@ -45,9 +45,14 @@
               <h1 class="mb-5">Take a look at what I've been working on!</h1>
             <div class="row">
               <div class="col-md-6 mb-4">
-                <img src="/images/cinematic-flirt-1.png" class="img-fluid mb-3 rounded" alt="Landing Page preview" title="Landing page"/>
-                <h3 class="text-center m-0">Coming Soon...</h3>
-                <p class="text-center text-muted">Built with React, Bootstrap, CSS</p>
+                <img src="/images/Crochet-by-q.PNG" class="img-fluid mb-3 rounded" alt="Landing Page preview" title="Landing page"/>
+                <h3 class="text-center m-0">E-commerce Website</h3>
+                <p class="text-center text-muted">Built with HTML, Bootstrap, and CSS</p>
+                </div>
+              <div class="col-md-6 mb-4">
+                <img src="/images/cinematic-flirt.png" class="img-fluid mb-3 rounded" alt="Landing Page preview" title="Landing page"/>
+                <h3 class="text-center m-0">Cinematic Flirt</h3>
+                <p class="text-center text-muted">Built with React, Bootstrap, and CSS</p>
               </div>
               <div class="col-md-6 mb-4">
                <img src="/images/react-dictionary.png" class="img-fluid mb-3 rounded" alt="Landing Page preview" title="Landing page"/>
