Updated image for client work

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <div class="container">
   <div class="row mb-5">
     <div class="col d-none d-lg-block">
-      <img src="images/Crochet-by-q.PNG" class="img-fluid rounded" alt="Dictionary preview" title="React Dictionary">
+      <img src="images/Crochet-by-que.png" class="img-fluid rounded" alt="Dictionary preview" title="React Dictionary">
     </div>
     <div class="col">
       <div class="project-description">
